birdnet-go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: birdnet
  name: birdnet
  namespace: birdnet
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: birdnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: birdnet
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Vancouver
          # https://github.com/tphakala/birdnet-go/releases
          image: ghcr.io/tphakala/birdnet-go:nightly-20250725
          imagePullPolicy: IfNotPresent
          name: birdnet
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v2/health
              port: 8080
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v2/health
              port: 8080
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /api/v2/health
              port: 8080
            failureThreshold: 10 
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: birdnet-nfs-config
            - mountPath: /data
              name: birdnet-nfs-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      nodeSelector:
        kubernetes.io/hostname: croblodocus
      volumes:
        - name: birdnet-nfs-config
          persistentVolumeClaim:
            claimName: birdnet-config-nfs-pvc
        - name: birdnet-nfs-data
          persistentVolumeClaim:
            claimName: birdnet-data-nfs-pvc
