birdnet-go/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: birdnet-route
  namespace: birdnet
spec:
  parentRefs:
    - name: crobceratops-gateway
      namespace: gateways
    - name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - birdnet.crobceratops.ryanbeales.com
    - birdnet.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: birdnet
          port: 8080
