birdnet-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  labels:
    app.kubernetes.io/name: birdnet
  name: birdnet
  namespace: birdnet
spec:
  ingressClassName: nginx
  rules:
    - host: birdnet.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: birdnet
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - birdnet.crobasaurusrex.ryanbeales.com
      secretName: birdnet-crobasaurusrex-ryanbeales-com-tls
